[package]
name = "flowstate-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
flowstate-collab = { version = "0.1.0", path = "../flowstate-collab" }
iroh = "0.98.2"
postcard = { version = "1.1.3", features = ["use-std"] }
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
