[package]
name = "flowstate-tub"
version = "0.1.0"
edition = "2024"
publish = false

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
flowstate-document = { version = "0.1.0", path = "../flowstate-document" }
ignore = "0.4.25"
notify = "8.2.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tantivy = "0.26.1"
