[package]
name = "flowstate-tub"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
flowstate-document = { workspace = true }
flowstate-flow = { workspace = true }
flowstate-docx = { workspace = true }
ignore = { workspace = true }
notify = { workspace = true }
base64 = { workspace = true }
rusqlite = { workspace = true }
seekstorm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
