[package]
name = "flowstate"
version.workspace = true
edition.workspace = true
default-run = "flowstate"
publish.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crop = { workspace = true }
dirs = { workspace = true }
fff-search = { workspace = true }
flowstate-document = { workspace = true }
flowstate-docx = { workspace = true }
flowstate-flow = { workspace = true }
flowstate-sync = { workspace = true }
flowstate-tub = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
gpui-component-assets = { workspace = true }
hotpath = { workspace = true }
imagesize = { workspace = true }
mathjax_svg = { workspace = true }
mimalloc = { workspace = true }
resvg = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
toml = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

[features]
hotpath = [
  "hotpath/hotpath",
  "flowstate-document/hotpath",
  "flowstate-docx/hotpath",
  "flowstate-flow/hotpath",
]
hotpath-cpu = [
  "hotpath/hotpath-cpu",
  "flowstate-document/hotpath-cpu",
  "flowstate-docx/hotpath-cpu",
  "flowstate-flow/hotpath-cpu",
]
hotpath-alloc = [
  "hotpath",
  "hotpath/hotpath-alloc",
  "flowstate-document/hotpath-alloc",
  "flowstate-docx/hotpath-alloc",
  "flowstate-flow/hotpath-alloc",
]
profiler = ["hotpath", "hotpath-alloc"]

[target.'cfg(target_os = "macos")'.dependencies]
gpui-symbols = { workspace = true }


[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
cosmic-text = { workspace = true }
