[package]
name = "gpui-flowtext"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "A GPUI rich text editor component and document engine."
license = "MIT"

[lints]
workspace = true
[dependencies]
crop = { workspace = true }
gpui = { workspace = true }
gpui-component = { workspace = true }
hotpath = { workspace = true }
imagesize = { workspace = true }
mitex = { workspace = true }
postcard = { version = "1.1.3", features = ["use-std"] }
resvg = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
typst = { workspace = true }
typst-assets = { workspace = true, features = ["fonts"] }
typst-library = { workspace = true }
typst-svg = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
cosmic-text = { workspace = true }


[features]
hotpath = ["hotpath/hotpath"]
hotpath-cpu = ["hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
