[package]
name = "gpui-flowtext"
version.workspace = true
edition.workspace = true
publish.workspace = true
description = "A GPUI rich text editor component and document engine."
license = "MIT"

[lints]
workspace = true
[dependencies]
blake3 = "1.8.5"
crop = { workspace = true }
flowstate-fidelity.workspace = true
gpui = { workspace = true }
gpui-component = { workspace = true }
hotpath = { workspace = true }
im = "15.1.0"
imagesize = { workspace = true }
mitex = { workspace = true }
resvg = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tracing.workspace = true
typst = { workspace = true }
typst-assets = { workspace = true, features = ["fonts"] }
typst-library = { workspace = true }
typst-svg = { workspace = true }
unicode-segmentation = { workspace = true }
uuid = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
cosmic-text = { workspace = true }

[dev-dependencies]
flowstate-collab = { path = "../flowstate-collab" }
flowstate-document.workspace = true
gpui = { workspace = true, features = ["test-support"] }
loro = "1.13"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-cpu = ["hotpath"]
hotpath-alloc = ["hotpath", "hotpath/hotpath-alloc"]
